browser/themes/osx/browser.css
/* ... */
#
editBMPanel_tagsField
>
.
autocomplete
-
textbox
-
container
>
.
textbox
-
input
-
box
>
html
|
*
.
textbox
-
input
:
:
-
moz
-
placeholder
{
opacity
:
1
.
0
;
color
:
#
bbb
;
}
.
editBMPanel_rowLabel
{
text
-
align
:
end
;
}
.
panel
-
promo
-
box
{
margin
:
8px
-
16px
-
16px
-
16px
;
padding
:
8px
16px
;
background
:
#
e5e5e5
;
border
-
top
:
1px
solid
hsla
(
0
0
%
0
%
.
1
)
;
border
-
radius
:
0
0
5px
5px
;
box
-
shadow
:
0
-
1px
hsla
(
0
0
%
100
%
.
5
)
inset
0
1px
1px
hsla
(
0
0
%
0
%
.
03
)
inset
;
color
:
#
808080
;
}
.
panel
-
promo
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
sync
-
notification
-
24
.
png
"
)
;
-
moz
-
margin
-
end
:
10px
;
vertical
-
align
:
middle
;
}
.
panel
-
promo
-
closebutton
{
border
:
none
;
-
moz
-
margin
-
end
:
-
14px
;
margin
-
top
:
-
8px
;
}
.
panel
-
promo
-
closebutton
>
.
toolbarbutton
-
text
{
padding
:
0
;
margin
:
0
;
}
media
(
min
-
resolution
:
2dppx
)
{
.
panel
-
promo
-
closebutton
>
.
toolbarbutton
-
icon
{
width
:
16px
;
}
}
#
historySwipeAnimationCurrentPage
#
historySwipeAnimationNextPage
{
box
-
shadow
:
0
3px
6px
rgba
(
0
0
0
0
.
6
)
;
}
#
historySwipeAnimationContainer
{
background
:
url
(
"
chrome
:
/
/
browser
/
skin
/
subtle
-
pattern
.
png
"
)
#
B3B9C1
;
}
#
sidebar
sidebarheader
{
background
-
color
:
#
e2e7ed
;
}
#
sidebar
:
-
moz
-
window
-
inactive
sidebarheader
:
-
moz
-
window
-
inactive
{
background
-
color
:
#
e8e8e8
;
}
sidebarheader
{
padding
:
2px
;
text
-
shadow
:
none
;
}
#
sidebar
-
box
{
-
moz
-
appearance
:
dialog
;
-
moz
-
appearance
:
none
;
}
.
sidebar
-
splitter
{
-
moz
-
border
-
start
:
none
;
-
moz
-
border
-
end
:
1px
solid
#
bdbdbd
;
min
-
width
:
1px
;
width
:
3px
;
background
-
image
:
none
!
important
;
background
-
color
:
transparent
;
-
moz
-
margin
-
start
:
-
3px
;
position
:
relative
;
}
#
appcontent
~
.
sidebar
-
splitter
{
-
moz
-
border
-
start
:
1px
solid
#
ccc
;
-
moz
-
border
-
end
:
none
;
-
moz
-
margin
-
start
:
0
;
-
moz
-
margin
-
end
:
-
3px
;
}
.
sidebar
-
title
#
sidebar
-
title
{
color
:
#
535f6d
;
font
-
weight
:
bold
;
}
.
sidebar
-
throbber
[
loading
=
"
true
"
]
#
sidebar
-
throbber
[
loading
=
"
true
"
]
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
icons
/
loading_16
.
png
"
)
;
}
sidebarheader
>
.
tabs
-
closebutton
>
.
toolbarbutton
-
text
{
display
:
none
;
}
.
browserContainer
>
findbar
{
background
:
scopeBarBackground
;
border
-
top
:
scopeBarSeparatorBorder
;
color
:
-
moz
-
DialogText
;
text
-
shadow
:
none
;
}
toolbarbutton
.
chevron
>
.
toolbarbutton
-
menu
-
dropmarker
{
display
:
none
;
}
.
bookmark
-
item
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
places
/
defaultFavicon
.
png
"
)
;
}
media
(
min
-
resolution
:
2dppx
)
{
.
bookmark
-
item
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
places
/
defaultFavicon
2x
.
png
"
)
;
}
image
.
bookmark
-
item
{
width
:
16px
;
}
}
.
openintabs
-
menuitem
{
list
-
style
-
image
:
none
;
}
.
tabbrowser
-
tabbox
{
margin
:
0
;
}
%
include
.
.
/
shared
/
tabs
.
inc
.
css
.
tab
-
label
{
margin
-
top
:
1px
;
margin
-
bottom
:
0
;
text
-
align
:
center
;
}
media
(
min
-
resolution
:
2dppx
)
{
#
TabsToolbar
:
:
before
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
tab
-
background
-
end
2x
.
png
)
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
tab
-
background
-
middle
2x
.
png
)
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
tab
-
background
-
start
2x
.
png
)
;
}
.
tabbrowser
-
tab
:
hover
>
.
tab
-
stack
>
.
tab
-
background
:
not
(
[
selected
=
true
]
)
.
tabs
-
newtab
-
button
:
hover
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
tab
-
background
-
start
2x
.
png
)
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
tab
-
background
-
middle
2x
.
png
)
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
tab
-
background
-
end
2x
.
png
)
;
}
.
tab
-
background
-
middle
[
selected
=
true
]
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
tab
-
active
-
middle
2x
.
png
)
fgTabTexture
none
;
}
.
tab
-
background
-
start
[
selected
=
true
]
:
-
moz
-
locale
-
dir
(
ltr
)
:
:
after
.
tab
-
background
-
end
[
selected
=
true
]
:
-
moz
-
locale
-
dir
(
rtl
)
:
:
after
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
tab
-
stroke
-
start
2x
.
png
)
;
}
.
tab
-
background
-
end
[
selected
=
true
]
:
-
moz
-
locale
-
dir
(
ltr
)
:
:
after
.
tab
-
background
-
start
[
selected
=
true
]
:
-
moz
-
locale
-
dir
(
rtl
)
:
:
after
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
tab
-
stroke
-
end
2x
.
png
)
;
}
.
tab
-
icon
-
image
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
places
/
defaultFavicon
2x
.
png
"
)
;
image
-
rendering
:
-
moz
-
crisp
-
edges
;
}
.
tab
-
throbber
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
connecting
2x
.
png
"
)
;
}
.
tab
-
throbber
[
progress
]
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
loading
2x
.
png
"
)
;
}
#
tabbrowser
-
tabs
[
movingtab
]
>
.
tabbrowser
-
tab
[
beforeselected
]
:
not
(
[
last
-
visible
-
tab
]
)
:
:
after
.
tabbrowser
-
tab
:
not
(
[
selected
]
)
:
not
(
[
afterselected
-
visible
]
)
:
not
(
[
afterhovered
]
)
:
not
(
[
first
-
visible
-
tab
]
)
:
not
(
:
hover
)
:
:
before
#
tabbrowser
-
tabs
:
not
(
[
overflow
]
)
>
.
tabbrowser
-
tab
[
last
-
visible
-
tab
]
:
not
(
[
selected
]
)
:
not
(
[
beforehovered
]
)
:
not
(
:
hover
)
:
:
after
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
tabbrowser
/
tab
-
separator
2x
.
png
)
;
}
}
.
tabbrowser
-
tab
:
not
(
:
hover
)
>
.
tab
-
stack
>
.
tab
-
content
>
.
tab
-
icon
-
image
:
not
(
[
selected
=
"
true
"
]
)
{
opacity
:
.
9
;
}
.
tab
-
label
:
not
(
[
selected
=
"
true
"
]
)
{
opacity
:
.
7
;
}
.
tabbrowser
-
tab
.
tabs
-
newtab
-
button
{
font
:
message
-
box
;
font
-
weight
:
bold
;
border
:
none
;
}
/* ... */

