[Australis] Bug 968595 - Adjust identity panel alignment and styling. r=dao
UltraBlame original commit: 1cf01a7bd18b846eec3c35880d6d93de70a4a262

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -19247,9 +19247,19 @@ padding
 16px
 ;
 background
+-
+color
 :
-#
-e5e5e5
+hsla
+(
+210
+4
+%
+10
+%
+.
+07
+)
 ;
 border
 -
@@ -19259,13 +19269,13 @@ top
 solid
 hsla
 (
-0
-0
+210
+4
 %
-0
+10
 %
 .
-1
+12
 )
 ;
 border
@@ -19312,8 +19322,14 @@ inset
 ;
 color
 :
-#
-808080
+hsl
+(
+0
+0
+%
+30
+%
+)
 ;
 }
 .
@@ -25276,6 +25292,18 @@ png
 identity
 -
 popup
+{
+margin
+-
+top
+:
+1px
+;
+}
+#
+identity
+-
+popup
 >
 .
 panel
@@ -25314,25 +25342,35 @@ button
 container
 {
 background
-:
-linear
 -
-gradient
+color
+:
+hsla
 (
-to
-bottom
-rgba
-(
-0
-0
-0
-0
-.
-04
-)
-60
+210
+4
 %
-transparent
+10
+%
+.
+07
+)
+;
+border
+-
+top
+:
+1px
+solid
+hsla
+(
+210
+4
+%
+10
+%
+.
+12
 )
 ;
 padding
